--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "next": "13.4.19",
+    "next-react-svg": "^1.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.72.0",
     "scss": "^0.2.4"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.1.0"
   }
 }
